--- a/src/app/_components/shared/skewed-wrapper/skewed-wrapper.component.html
+++ b/src/app/_components/shared/skewed-wrapper/skewed-wrapper.component.html
@@ -1,4 +1,4 @@
-<div class="skewed" [ngClass]="{'skewed--narrow': !full}">
+<div class="skewed" [ngClass]="{'skewed--narrow': !full, 'skewed--notOpaque': !opaque}">
   <div class="skewed__wrapper">
     <div class="skewed__content">
       <ng-content></ng-content>
