--- a/src/app/_components/public/testimonials/leave-testimonial/leave-testimonial.component.html
+++ b/src/app/_components/public/testimonials/leave-testimonial/leave-testimonial.component.html
@@ -1,56 +1,61 @@
-<section class="testimonial">
-  <app-skewed-wrapper [full]="true">
-    <h1>Please let us know how we've done</h1>
-    <form *ngIf="!submitted" (submit)="submitTestimonial($event)" class="form">
-      <div class="form__row">
-        <fieldset class="rating">
-          <input type="radio" id="star5" name="rating" value="5" [(ngModel)]="stars" />
-          <label class="full" for="star5" title="5 stars"></label>
-  
-          <input type="radio" id="star4half" name="rating" value="4.5" [(ngModel)]="stars" />
-          <label class="half" for="star4half" title="4.5 stars"></label>
-  
-          <input type="radio" id="star4" name="rating" value="4" [(ngModel)]="stars" />
-          <label class="full" for="star4" title="4 stars"></label>
-  
-          <input type="radio" id="star3half" name="rating" value="3.5" [(ngModel)]="stars" />
-          <label class="half" for="star3half" title="3.5 stars"></label>
-  
-          <input type="radio" id="star3" name="rating" value="3" [(ngModel)]="stars" />
-          <label class="full" for="star3" title="3 stars"></label>
-  
-          <input type="radio" id="star2half" name="rating" value="2.5" [(ngModel)]="stars" />
-          <label class="half" for="star2half" title="2.5 stars"></label>
-  
-          <input type="radio" id="star2" name="rating" value="2" [(ngModel)]="stars" />
-          <label class="full" for="star2" title="2 stars"></label>
-  
-          <input type="radio" id="star1half" name="rating" value="1.5" [(ngModel)]="stars" />
-          <label class="half" for="star1half" title="1.5 stars"></label>
-  
-          <input type="radio" id="star1" name="rating" value="1" [(ngModel)]="stars" />
-          <label class="full" for="star1" title="1"></label>
-  
-          <input type="radio" id="starhalf" name="rating" value="half" />
-          <label class="half" for="starhalf" title="0.5"></label>
-        </fieldset>
-      </div>
-      <div class="form__row">
-        <label for="name" class="form__label">Name</label>
-        <input type="text" name="name" id="name" class="form__input" [(ngModel)]="name" #testimonialName="ngModel" placeholder="Name">
-      </div>
-      <div class="form__row">
-        <label for="location" class="form__label">Location <small class="form__optional">(Optional)</small></label>
-        <input type="text" name="location" id="location" class="form__input" [(ngModel)]="location" #testimonialLocation="ngModel" placeholder="Location">
-      </div>
-      <div class="form__row">
-        <label for="body" class="form__label">Please enter your review <small class="form__optional">(Optional)</small></label>
-        <textarea rows="10" name="body" id="body" class="form__input" [(ngModel)]="body" #testimonialBody="ngModel" placeholder="Please enter your review"></textarea>
-      </div>
-      <div class="form__row">
-        <button type="submit" class="button">Submit</button>
-      </div>
-    </form>
+<section class="testimonial__leaveTestimonial" [@slideInOut]="formState">
+  <app-skewed-wrapper [full]="true" [opaque]="false" >
+    <div class="item">
+      <h1 class="item__title">Please let us know how we've done</h1>
+      <button type="button" class="button button--plain" (click)="toggleForm()" >
+        <i class="icon icon--cross"></i>
+      </button>
+      <form *ngIf="!submitted" (submit)="submitTestimonial($event)" class="form">
+        <div class="form__row">
+          <fieldset class="rating">
+            <input type="radio" id="star5" name="rating" value="5" [(ngModel)]="stars" />
+            <label class="full" for="star5" title="5 stars"></label>
+    
+            <input type="radio" id="star4half" name="rating" value="4.5" [(ngModel)]="stars" />
+            <label class="half" for="star4half" title="4.5 stars"></label>
+    
+            <input type="radio" id="star4" name="rating" value="4" [(ngModel)]="stars" />
+            <label class="full" for="star4" title="4 stars"></label>
+    
+            <input type="radio" id="star3half" name="rating" value="3.5" [(ngModel)]="stars" />
+            <label class="half" for="star3half" title="3.5 stars"></label>
+    
+            <input type="radio" id="star3" name="rating" value="3" [(ngModel)]="stars" />
+            <label class="full" for="star3" title="3 stars"></label>
+    
+            <input type="radio" id="star2half" name="rating" value="2.5" [(ngModel)]="stars" />
+            <label class="half" for="star2half" title="2.5 stars"></label>
+    
+            <input type="radio" id="star2" name="rating" value="2" [(ngModel)]="stars" />
+            <label class="full" for="star2" title="2 stars"></label>
+    
+            <input type="radio" id="star1half" name="rating" value="1.5" [(ngModel)]="stars" />
+            <label class="half" for="star1half" title="1.5 stars"></label>
+    
+            <input type="radio" id="star1" name="rating" value="1" [(ngModel)]="stars" />
+            <label class="full" for="star1" title="1"></label>
+    
+            <input type="radio" id="starhalf" name="rating" value="half" />
+            <label class="half" for="starhalf" title="0.5"></label>
+          </fieldset>
+        </div>
+        <div class="form__row">
+          <label for="name" class="form__label">Name</label>
+          <input type="text" name="name" id="name" class="form__input" [(ngModel)]="name" #testimonialName="ngModel" placeholder="Name">
+        </div>
+        <div class="form__row">
+          <label for="location" class="form__label">Location <small class="form__optional">(Optional)</small></label>
+          <input type="text" name="location" id="location" class="form__input" [(ngModel)]="location" #testimonialLocation="ngModel" placeholder="Location">
+        </div>
+        <div class="form__row">
+          <label for="body" class="form__label">Please enter your review <small class="form__optional">(Optional)</small></label>
+          <textarea rows="10" name="body" id="body" class="form__input" [(ngModel)]="body" #testimonialBody="ngModel" placeholder="Please enter your review"></textarea>
+        </div>
+        <div class="form__row">
+          <button type="submit" (click)="toggleForm()" class="button">Submit</button>
+        </div>
+      </form>
+    </div>
     <div class="testimonial__recieved" *ngIf="submitted">
       <h2 class="form__header">Thanks for your feedback</h2>
     </div>
