--- a/src/scss/components/_skewed-bg.scss
+++ b/src/scss/components/_skewed-bg.scss
@@ -3,9 +3,10 @@
 
 // Variables
 ///////////////////////////
-$SKEWED-Clip-Wide:			polygon(0% 0%, 90% 0, 80% 100%, 0% 100%);
-$SKEWED-Clip-Narrow:		polygon(0% 0%, 60% 0%, 50% 100%, 0% 100%);
-$SKEWED-BgColor:				$COLOR-BG-Opaque;
+$SKEWED-Clip-Wide:								polygon(0% 0%, 90% 0, 80% 100%, 0% 100%);
+$SKEWED-Clip-Narrow:							polygon(0% 0%, 60% 0%, 50% 100%, 0% 100%);
+$SKEWED-BgColor:									$COLOR-BG-Opaque;
+$SKEWED-BgColor--notOpaque:				$COLOR-Primary;
 
 
 // Main
@@ -45,6 +46,10 @@ app-skewed-wrapper {
 
 // Variants
 ///////////////////////////
+
+.skewed--notOpaque {
+	background-color: $SKEWED-BgColor--notOpaque;
+}
 
 
 // Media Queries
